--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt" ng-app="App">
 <head>
     <link rel="stylesheet" href="bootstrap.min.css"/>
-    <script src="angular/angular.js"></script>
-    <script src="angular-route/angular-route.js"></script>
+    <script src="angular.js"></script>
+    <script src="angular-route.js"></script>
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
     <script src="modules/home.module.js"></script>
