--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt" ng-app="App">
 <head>
-    <link rel="stylesheet" href="bootstrap.min.css"/>
+    <link rel="stylesheet" href="./bootstrap.min.css"/>
     <script src="angular.js"></script>
     <script src="angular-route.js"></script>
     <script src="app.module.js"></script>
